--- a/style.css
+++ b/style.css
@@ -3,3 +3,13 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+#move {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 25%;
+    width: 25%;
+    border-radius: 50%;
+}
