--- a/style.css
+++ b/style.css
@@ -4,12 +4,14 @@
     box-sizing: border-box;
 }
 
+
+
 #move {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    height: 25%;
-    width: 25%;
+    height: 200px;
+    width: 200px;
     border-radius: 50%;
 }
