--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
    background-size: cover;
    background-repeat: no-repeat;
    background-attachment: fixed;
+   overflow: hidden;
 }
 
 #move {
