--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body {
 
 #move {
     position: absolute;
-    top: 80%;
+    /* top: 80%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); */
     height: 200px;
     width: 200px;
     border-radius: 50%;
