--- a/style.css
+++ b/style.css
@@ -15,6 +15,11 @@ body {
 #title {
     font-size: 2.5rem;
     color: #fff;
+    transition: text-shadow 0.3 ease;
+}
+
+#title:hover{
+    animation: glow 1s ease-in-out infinite alternate;
 }
 
 
