--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body {
     font-size: 2.5rem;
     color: #fff;
     transition: text-shadow 0.3 ease;
+    display: inline-block;
 }
 
 #title:hover{
