--- a/style.css
+++ b/style.css
@@ -12,11 +12,24 @@ body {
    overflow: hidden;
 }
 
+#header {
+    z-index: auto;
+    position: absolute;
+}
+
 #title {
     font-size: 2.5rem;
     color: #fff;
     transition: text-shadow 0.3 ease;
     display: inline-block;
+}
+
+#move {
+    position: absolute;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    transition: 0.5s;
 }
 
 #title:hover{
@@ -33,10 +46,4 @@ body {
   }
 }
 
-#move {
-    position: absolute;
-    height: 200px;
-    width: 200px;
-    border-radius: 50%;
-    transition: 0.5s;
-}
+
